--- a/src/css/style.css
+++ b/src/css/style.css
@@ -569,3 +569,30 @@ header {
   width: 40px;
   height: 40px;
 }
+
+/* Payment section */
+.checkout-form fieldset {
+  margin-bottom: 1.5rem;
+}
+
+.checkout-form input {
+  margin-bottom: 0.75rem;
+}
+
+/* Cart badge */
+.cart {
+  position: relative;
+}
+
+.cart-count {
+  position: absolute;
+  top: -5px;
+  right: -10px;
+  background: var(--tertiary-color);
+  color: white;
+  font-size: 0.8em;
+  font-weight: bold;
+  border-radius: 50%;
+  padding: 2px 6px;
+  display: none;
+}
